[tool.poetry]
name = "silverbullet"
version = "0.1.0"
description = "shallow but powerful wrapper around pybullet"
authors = ["coord.e <me@coord-e.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pybullet = "^2.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
